# Integracomm-center-brain

./: .env.example  .gitignore  OPERACAO.md  Painel Growth - Integracomm (Frontend).html  deploy.cmd  painel_growth.html  requirements.txt  run_agent_scheduled.ps1  setup_tasks.ps1  start_painel.cmd
backend/: README.md  main.py  paridade_central.py  paridade_l6.py  paridade_receita_operacoes.py  paridade_squads.py  pyproject.toml
backend/app/: allhands.py  allhands_pptx.py  api.py  audit.py  auth.py  churn_report.py  config.py  growth_carga.py  help_texts.py  llm_budget.py  raiox.py  report_api.py  reports.py  semana.py  sentinel.py  slack.py  spa.py  team_config.py  viz.py
backend/scripts/: backfill_activities.py  backfill_flow.py  check_nps_fill.py  cleanup_alerts.py  cohort_ranking.py  coleta_first_touch_1007.py  coleta_pendente_0907.py  diag_account.py  diag_composition.py  exec_signals.ps1  export_panel.py  flow_catchup_1307.py  flow_julho_cirurgico.py  join_cohort_whatsapp.py  msg_signals_3a.ps1  offline_6casos.py  offline_abs_vs_rel.py  offline_diag_density.py  offline_exec_clickup_full.py  offline_exec_in_score.py  offline_fat_churn.py  offline_fat_sweep.py  offline_gated_auc.py  offline_score_account_check.py  run_growth_sample.py  run_portfolio.py  run_sentinel.py  run_tone_analysis.py  send_slack_report.py  setup_pg_reset.ps1  smoke_persist.py  sync_cancelamentos.py  sync_marketing.py  sync_rapido.py  validate_execution.py
backend/tests/: test_cancel_confirmer.py  test_cancel_regex.py  test_case_timeline.py  test_execution_score.py  test_nps_sheet_parse.py  (+2 more)
(+150 files in other folders)
